--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,6 +18,15 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+body {
+  font-family: "Segoe UI", sans-serif;
+  font-size: 14px;
+  color: white;
+  background: #121212;
+  -webkit-font-smoothing: antialiased;
+}
+
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
